--- a/mondrian.html
+++ b/mondrian.html
@@ -13,9 +13,14 @@
 
 	<p>Hard mode : you can't have 2 rectangle with the same width/lenght or lenght/width (if you make a 2*3 rectangle you can't make a 3*2 one)</p>
 	<div id="parameter" class="well">
-		square size <input type="number">
-		<button id="init" >init</button>
-		<button id="validate">validate square</button>
+		<div class="form-inline form-group">
+		square size <input class="form-control nbMax" type="number">
+		<button id="init"  class="btn btn-primary">init</button>
+		</div>
+		<div class="form-inline form-group">
+		current square size <input class="form-control displayer" type="number" disabled="disabled">
+		<button id="validate" class="btn btn-primary">validate square</button>
+		</div>
 		Score <span id="score">0</span>
 	</div>
 
